# Auto-Resubmit

./: .gitignore  README.md  README_zh.md  SUPPORT_MATRIX.md  pyproject.toml
auto_resubmit/: __init__.py  __main__.py  latex.py  review.py
src/auto_resubmit/: cli.py  conferences.py  latex.py  pipeline.py
testdata/: README.md
tests/: test_latex.py  test_pipeline.py
tools/: render_pdf_contact_sheets.py  validate_mutual_families.py  validate_supported_families.py
